[tool.poetry]
name = "fastapi-boilerplat"
version = "0.1.0"
description = ""
authors = ["maksood <maksood.aalam@devkraft.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.14.4"
fastapi = "^0.136.1"
pydantic = "^2.13.3"
booktype = "^1.5"
redis = "^7.4.0"
uvicorn = "^0.46.0"
pydantic-settings = "^2.14.1"
sqlalchemy = "^2.0.41"
psycopg = {extras = ["binary"], version = "^3.2.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
